# tei-chunker

./: Dockerfile  README.md  SUMMARY  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  publish.yaml  test.yml
SUMMARIES/: PYTHON.md
examples/: SUMMARY  chunking-service.yaml
github/workflows/: SUMMARY
tei_chunker/: SUMMARY  __init__.py  chunking.py  graph.py  service.py
tei_chunker/core/: SUMMARY  interfaces.py  processor.py  strategies.py
tei_chunker/features/: SUMMARY  manager.py  processor.py
tei_chunker/synthesis/: SUMMARY  advanced.py  base.py  patterns.py  prompts.py  strategies.py
tests/: SUMMARY  conftest.py  test_chunking.py  test_document.py  test_feature_manager.py  test_github_utils.py  test_processor.py  test_strategies.py  test_synthesis.py
