[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tei-chunker"
dynamic = ["version"]
description = "Hierarchical document chunking for TEI XML documents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["tei", "xml", "chunking", "nlp", "documents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "fire>=0.5.0",
    "github3.py>=3.2.0",
    "loguru>=0.7.0",
    "duckduckgo_search>=3.9.0",
    "lxml>=4.9.0",
    "pathlib>=1.0.0",
    "PyGithub>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/tei-chunker"
Repository = "https://github.com/yourusername/tei-chunker"
Documentation = "https://github.com/yourusername/tei-chunker#readme"

[tool.hatch.version]
path = "tei_chunker/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tei_chunker"]

[tool.pytest.ini_options]
addopts = "--cov=tei_chunker --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
